--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -78,7 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\HeroesMovementDamage.cs" />
+    <Compile Include="Assets\Scripts\HeroScript.cs" />
     <Compile Include="Assets\Scripts\HiringUIScript.cs" />
     <Compile Include="Assets\Scripts\MonsterScript.cs" />
     <Compile Include="Assets\Scripts\MonsterSpawner.cs" />
