--- a/TeamBesterestGame/TeamBesterestGame.CSharp.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.CSharp.csproj
@@ -78,13 +78,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\PickUpRoom.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\HeroScript.cs" />
+    <Compile Include="Assets\Scripts\HiringButton.cs" />
     <Compile Include="Assets\Scripts\HiringUIScript.cs" />
     <Compile Include="Assets\Scripts\MonsterScript.cs" />
-    <Compile Include="Assets\Scripts\MonsterSpawner.cs" />
+    <Compile Include="Assets\Scripts\PickUpRoom.cs" />
     <Compile Include="Assets\Scripts\ResumeExit.cs" />
     <Compile Include="Assets\Scripts\ResumeScript.cs" />
+    <Compile Include="Assets\Scripts\RoomScript.cs" />
     <Compile Include="Assets\Scripts\SpawnNewSquare.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
