--- a/TeamBesterestGame/TeamBesterestGame.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Assets\Scripts\HiringButton.cs" />
     <Compile Include="Assets\Scripts\HiringUIScript.cs" />
     <Compile Include="Assets\Scripts\InterviewButtonScript.cs" />
+    <Compile Include="Assets\Scripts\InterviewManager.cs" />
     <Compile Include="Assets\Scripts\MonsterScript.cs" />
     <Compile Include="Assets\Scripts\PickUpRoom.cs" />
     <Compile Include="Assets\Scripts\ResumeExit.cs" />
