Doors now block heroes from entering

--- a/TeamBesterestGame/TeamBesterestGame.CSharp.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.CSharp.csproj
@@ -78,10 +78,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\DoorScript.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\HeroScript.cs" />
     <Compile Include="Assets\Scripts\HiringButton.cs" />
     <Compile Include="Assets\Scripts\HiringUIScript.cs" />
+    <Compile Include="Assets\Scripts\InterviewButtonScript.cs" />
+    <Compile Include="Assets\Scripts\InterviewManager.cs" />
     <Compile Include="Assets\Scripts\MonsterScript.cs" />
     <Compile Include="Assets\Scripts\PickUpRoom.cs" />
     <Compile Include="Assets\Scripts\ResumeExit.cs" />
