--- a/TeamBesterestGame/Assembly-CSharp.csproj
+++ b/TeamBesterestGame/Assembly-CSharp.csproj
@@ -66,11 +66,16 @@
      <Compile Include="Assets\Scripts\SpawnNewSquare.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\CowardlyTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\FancyTrait.cs" />
+     <Compile Include="Assets\Scripts\Trait Scripts\FlirtyTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\GrossTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\GuardianTrait.cs" />
+     <Compile Include="Assets\Scripts\Trait Scripts\PridefulTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\RecklessTrait.cs" />
+     <Compile Include="Assets\Scripts\Trait Scripts\SlackerTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\TraitBase.cs" />
+     <Compile Include="Assets\Scripts\Trait Scripts\TyrantTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\WaryTrait.cs" />
+     <Compile Include="Assets\Scripts\Trait Scripts\WorkaholicTrait.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
