Application Queue is in the works

--- a/TeamBesterestGame/TeamBesterestGame.CSharp.csproj
+++ b/TeamBesterestGame/TeamBesterestGame.CSharp.csproj
@@ -91,6 +91,18 @@
     <Compile Include="Assets\Scripts\ResumeScript.cs" />
     <Compile Include="Assets\Scripts\RoomScript.cs" />
     <Compile Include="Assets\Scripts\SpawnNewSquare.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\CowardlyTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\FancyTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\FlirtyTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\GrossTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\GuardianTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\PridefulTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\RecklessTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\SlackerTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\TraitBase.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\TyrantTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\WaryTrait.cs" />
+    <Compile Include="Assets\Scripts\Trait Scripts\WorkaholicTrait.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
