Added abstract BaseHero class to make future hero types from. Contains current and max health to allow healing, percentages and etc Contains damage and value for other functions and scripts to use.

--- a/TeamBesterestGame/Assembly-CSharp.csproj
+++ b/TeamBesterestGame/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\DoorScript.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Scripts\Hero Scripts\BaseHero.cs" />
      <Compile Include="Assets\Scripts\HeroScript.cs" />
      <Compile Include="Assets\Scripts\HiringButton.cs" />
      <Compile Include="Assets\Scripts\HiringUIScript.cs" />
