Added basic hero types. Mage still has placeholder attack. No abilities yet.

--- a/TeamBesterestGame/Assembly-CSharp.csproj
+++ b/TeamBesterestGame/Assembly-CSharp.csproj
@@ -54,6 +54,9 @@
      <Compile Include="Assets\Scripts\DoorScript.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Hero Scripts\BaseHero.cs" />
+     <Compile Include="Assets\Scripts\Hero Scripts\MageHero.cs" />
+     <Compile Include="Assets\Scripts\Hero Scripts\RogueHero.cs" />
+     <Compile Include="Assets\Scripts\Hero Scripts\WarriorHero.cs" />
      <Compile Include="Assets\Scripts\HeroScript.cs" />
      <Compile Include="Assets\Scripts\HiringButton.cs" />
      <Compile Include="Assets\Scripts\HiringUIScript.cs" />
