Started trying to think of how to implement work ethics

--- a/TeamBesterestGame/Assembly-CSharp.csproj
+++ b/TeamBesterestGame/Assembly-CSharp.csproj
@@ -90,6 +90,7 @@
      <Compile Include="Assets\Scripts\Trait Scripts\TyrantTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\WaryTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\WorkaholicTrait.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\BaseEthic.cs" />
      <None Include="Assets\StreamingAssets\desc.txt" />
      <None Include="Assets\WwiseSettings.xml" />
  <Reference Include="Vuforia.UnityExtensions.Editor">
