Fixed some bugs, and missing values in BaseMonster. Added another more simple WorkEthic.

--- a/TeamBesterestGame/Assembly-CSharp.csproj
+++ b/TeamBesterestGame/Assembly-CSharp.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\ConstructionScript.cs" />
      <Compile Include="Assets\Scripts\CSVImporter.cs" />
+     <Compile Include="Assets\Scripts\Defunct\HeroScript.cs" />
+     <Compile Include="Assets\Scripts\Defunct\MonsterScript.cs" />
+     <Compile Include="Assets\Scripts\Defunct\PickUpRoom.cs" />
+     <Compile Include="Assets\Scripts\Defunct\ResumeScript.cs" />
+     <Compile Include="Assets\Scripts\Defunct\RoomScript.cs" />
+     <Compile Include="Assets\Scripts\Defunct\SpawnNewSquare.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\Hero Scripts\BaseHero.cs" />
      <Compile Include="Assets\Scripts\Hero Scripts\ClericHero.cs" />
@@ -61,7 +67,6 @@
      <Compile Include="Assets\Scripts\Hero Scripts\RogueHero.cs" />
      <Compile Include="Assets\Scripts\Hero Scripts\SniperHero.cs" />
      <Compile Include="Assets\Scripts\Hero Scripts\WarriorHero.cs" />
-     <Compile Include="Assets\Scripts\HeroScript.cs" />
      <Compile Include="Assets\Scripts\InterviewButtonScript.cs" />
      <Compile Include="Assets\Scripts\InterviewManager.cs" />
      <Compile Include="Assets\Scripts\Monster Scripts\BaseMonster.cs" />
@@ -70,14 +75,9 @@
      <Compile Include="Assets\Scripts\Monster Scripts\DragonkinMonster.cs" />
      <Compile Include="Assets\Scripts\Monster Scripts\TribalMonster.cs" />
      <Compile Include="Assets\Scripts\Monster Scripts\UndeadMonster.cs" />
-     <Compile Include="Assets\Scripts\MonsterScript.cs" />
      <Compile Include="Assets\Scripts\Party Scripts\BaseParty.cs" />
-     <Compile Include="Assets\Scripts\PickUpRoom.cs" />
-     <Compile Include="Assets\Scripts\ResumeScript.cs" />
      <Compile Include="Assets\Scripts\Room Scripts\BaseRoom.cs" />
      <Compile Include="Assets\Scripts\Room Scripts\EntranceRoom.cs" />
-     <Compile Include="Assets\Scripts\RoomScript.cs" />
-     <Compile Include="Assets\Scripts\SpawnNewSquare.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\CowardlyTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\FancyTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\FlirtyTrait.cs" />
@@ -91,8 +91,173 @@
      <Compile Include="Assets\Scripts\Trait Scripts\WaryTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\WorkaholicTrait.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\BaseEthic.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\ChatterBox.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\Focused.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\Leader.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\Mentor.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\OverAchiever.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\TeamPlayer.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolDefault.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolLEngineDefault.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\_ArrayPoolSpatialAudio.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\Ak3DSpatializationMode.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkActionOnEventType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioDeviceState.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioFormat.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioInterruptionCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAudioSourceChangeCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkAuxSendValue.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkBankCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkBankContent.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkBusHierarchyFlags.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkCallbackSerializer.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkCallbackType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkChannelConfig.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkChannelConfigType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkChannelEmitter.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkChannelOrdering.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkConnectionType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkCurveInterpolation.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkDeviceSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkDiffractionFlags.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkDurationCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkDynamicSequenceItemCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkDynamicSequenceType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkEmitterSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkEventCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkExternalSourceInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkGlobalCallbackLocation.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkGroupType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkImageSourceParams.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkImageSourceSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkInitSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkIterator.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMarkerCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMemSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMeteringFlags.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMIDICcTypes.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMIDIEvent.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMIDIEventCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMIDIEventTypes.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMIDIPost.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMonitorErrorCode.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMonitorErrorLevel.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMonitoringCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMultiPositionType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMusicPlaylistCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMusicSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkMusicSyncCallbackInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkObjectInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkObstructionOcclusionValues.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkOutputSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPannerType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPanningRule.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPlaylist.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPlaylistArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPlaylistItem.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPluginType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPositioningInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPositionSourceType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPreparationType.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPropagationPathInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkPropagationPathInfoProxy.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkQueryRTPCValue.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkRamp.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AKRESULT.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkRoomParams.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSegmentInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSerializedCallbackHeader.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSoundPathInfo.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSoundPathInfoProxy.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSoundPropagationPathParams.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSourceChannelOrdering.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSourceSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkSpatialAudioInitSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkStreamMgrSettings.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkTransform.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkTriangle.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkTriangleProxy.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Common\AkVector.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Mac\AkMemPoolAttributes_Mac.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Mac\AkPlatformInitSettings_Mac.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Mac\AkSoundEngine_Mac.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Mac\AkSoundEnginePINVOKE_Mac.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Mac\AkThreadProperties_Mac.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Windows\AkAudioAPI_Windows.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Windows\AkMemPoolAttributes_Windows.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Windows\AkPlatformInitSettings_Windows.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Windows\AkSoundEngine_Windows.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Windows\AkSoundEnginePINVOKE_Windows.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Generated\Windows\AkThreadProperties_Windows.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkAudioInputManager.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkAuxSendArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkBankManager.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkBasePathGetter.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkCallbackManager.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkChannelEmitterArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkLogger.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkMIDIPostArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkPositionArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkPropagationPathInfoArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkSoundEngine.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkSoundPathInfoArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkTriangleArray.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\AkUtilities.cs" />
+     <Compile Include="Assets\Wwise\Deployment\API\Handwritten\WwiseTypes.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkAmbient.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkAudioListener.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkBank.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkDragDropHelper.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEmitterObstructionOcclusion.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEnvironment.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEnvironmentPortal.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEvent.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEventCallbackData.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEventPlayable.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkEventTrack.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkGameObj.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkGameObjEnvironmentData.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkGameObjListenerList.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkGameObjPositionData.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkGameObjPositionOffsetData.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkGameObjPosOffsetData.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkInitializer.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkMemBankLoader.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkObstructionOcclusion.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkRoom.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkRoomPortal.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkRoomPortalObstruction.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkRTPCPlayable.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkRTPCTrack.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkSoundEngineController.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkSpatialAudioBase.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkSpatialAudioEmitter.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkSpatialAudioListener.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkState.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkSurfaceReflector.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkSwitch.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTerminator.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerBase.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerCollisionEnter.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerCollisionExit.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerDisable.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerEnable.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerEnter.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerExit.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerMouseDown.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerMouseEnter.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerMouseExit.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkTriggerMouseUp.cs" />
+     <Compile Include="Assets\Wwise\Deployment\Components\AkUnityEventHandler.cs" />
+     <Compile Include="Assets\Wwise\Extensions\AkSoundEngine.extensions.cs" />
      <None Include="Assets\StreamingAssets\desc.txt" />
      <None Include="Assets\WwiseSettings.xml" />
+     <None Include="Assets\Wwise\Deployment\Plugins\Mac\Profile\AkSoundEngine.bundle\Contents\Resources\readme.txt" />
+     <None Include="Assets\Wwise\Version.txt" />
+     <None Include="Assets\Wwise\Deployment\Plugins\Mac\Debug\AkSoundEngine.bundle\Contents\Resources\readme.txt" />
+     <None Include="Assets\Wwise\Deployment\Plugins\Mac\Release\AkSoundEngine.bundle\Contents\Resources\readme.txt" />
  <Reference Include="Vuforia.UnityExtensions.Editor">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/VuforiaSupport/Managed/Editor/Vuforia.UnityExtensions.Editor.dll</HintPath>
  </Reference>
