--- a/TeamBesterestGame/Assembly-CSharp.csproj
+++ b/TeamBesterestGame/Assembly-CSharp.csproj
@@ -91,9 +91,11 @@
      <Compile Include="Assets\Scripts\Trait Scripts\WaryTrait.cs" />
      <Compile Include="Assets\Scripts\Trait Scripts\WorkaholicTrait.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\BaseEthic.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\BrownNoser.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\ChatterBox.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\Compliant.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\Focused.cs" />
+     <Compile Include="Assets\Scripts\Workethic Scripts\Frugal.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\Kleptomaniac.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\Leader.cs" />
      <Compile Include="Assets\Scripts\Workethic Scripts\Mentor.cs" />
